--- a/sale-management/order-management.mdx
+++ b/sale-management/order-management.mdx
@@ -1,13 +1,18 @@
 ---
-title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+title: "Quản lý bán hàng"
+description: "Description of your new file."
 ---
+
+
+# Quickstart
+
+> Start building awesome documentation in minutes
 
 ## Get started in three steps
 
 Get your documentation site running locally and make your first customization.
 
-### Step 1: Set up your local environment
+### Step 1: Tạo đơn hàng
 
 <AccordionGroup>
   <Accordion title="Clone your docs locally" icon="copy">
@@ -28,11 +33,9 @@ Get your documentation site running locally and make your first customization.
 
 <Accordion title="123" icon="sparkles">
   123
-
-  ![Hero Dark Pn](/images/hero-dark.png)
 </Accordion>
 
-### Step 2: Deploy your changes
+### Step 2: Cập nhật trạng thái đơn hàng
 
 <AccordionGroup>
   <Accordion title="Install our GitHub app" icon="github">
@@ -54,7 +57,7 @@ Get your documentation site running locally and make your first customization.
   </Accordion>
 </AccordionGroup>
 
-### Step 3: Go live
+### Step 3: Chi tiết trạng thái đơn hàng
 
 <Accordion title="Publish your docs" icon="rocket">
   1. Commit and push your changes.
