Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quickstart"
 description: "Start building awesome documentation in minutes"
+icon: "mug-hot"
 ---
 
 ## Get started in three steps
