--- a/development.mdx
+++ b/development.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Development'
 description: 'Preview changes locally to update your docs'
-icon: "mug-hot"
+icon: "pen-to-square"
 ---
 
 <Info>
