Documentation edits made through Mintlify web editor

--- a/sale-management/inventory-management.mdx
+++ b/sale-management/inventory-management.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Quản lý tồn kho"
 description: "Description of your new file."
-icon: "map"
+icon: "box-open-full"
 ---
 
 # Web editor
