--- a/settings/currency-setting.mdx
+++ b/settings/currency-setting.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Cài đặt tiền tệ'
+title: 'Cài đặt thanh toán'
 description: 'Description of your new file.'
-icon: "mug-hot"
+icon: "money-check-dollar"
 ---
 
