Documentation edits made through Mintlify web editor

--- a/sale-management/product-management/categories-management.mdx
+++ b/sale-management/product-management/categories-management.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Danh mục sản phẩm'
 description: 'Description of your new file.'
-icon: "mug-hot"
+icon: "arrow-down-short-wide"
 ---
 
