--- a/app-builder/authentication/register-login.mdx
+++ b/app-builder/authentication/register-login.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Tạo tài khoản & Login'
 description: 'Description of your new file.'
-icon: "circle-user"
+icon: "arrow-right-to-arc"
 ---
 
