Documentation edits made through Mintlify web editor

--- a/app-builder/builder/general-settings.mdx
+++ b/app-builder/builder/general-settings.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Cài đặt chung'
 description: 'Description of your new file.'
-icon: "circle-user"
+icon: "square-sliders-vertical"
 ---
 
