--- a/app-builder/builder/design-app/drag-drop-component.mdx
+++ b/app-builder/builder/design-app/drag-drop-component.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Drap & Drop Components'
 description: 'Description of your new file.'
-icon: "circle-user"
+icon: "diagram-predecessor"
 ---
 
