Documentation edits made through Mintlify web editor

--- a/sale-management/product-management/brands-management.mdx
+++ b/sale-management/product-management/brands-management.mdx
@@ -1,6 +1,10 @@
 ---
 title: "Thương hiệu"
 icon: "nfc-magnifying-glass"
-123
-
 ---
+<img 
+  src="../../images/hero-dark.png" 
+  alt="Main dashboard interface"
+  height="300"
+  className="rounded-lg"
+/>
