Documentation edits made through Mintlify web editor

--- a/sale-management/product-management/brands-management.mdx
+++ b/sale-management/product-management/brands-management.mdx
@@ -2,9 +2,9 @@
 title: "Thương hiệu"
 icon: "nfc-magnifying-glass"
 ---
-<img 
-  src="../../images/hero-dark.png" 
-  alt="Main dashboard interface"
-  height="300"
-  className="rounded-lg"
-/>
+
+Ở giao diện tổng quan, người dùng có thể tạo các thương hiệu để đại diện cho các sản phẩm của hệ thống
+
+●     Chọn “\+ Thêm” để thêm thương hiệu cho các sản phẩm
+
+○     Thêm từng thương hiệu → Điền các thông tin biểu mẫu yêu cầu → Nhấn “Tạo” để hoàn tất thao tác thêm thương hiệu
