Documentation edits made through Mintlify web editor

--- a/sale-management/product-management/brands-management.mdx
+++ b/sale-management/product-management/brands-management.mdx
@@ -3,8 +3,18 @@ title: "Thương hiệu"
 icon: "nfc-magnifying-glass"
 ---
 
+Tại phần Quản lý sản phẩm, truy cập tab Thương hiệu.
+
+![Picture1 Pn](/images/Picture1.png)
+
 Ở giao diện tổng quan, người dùng có thể tạo các thương hiệu để đại diện cho các sản phẩm của hệ thống
 
-●     Chọn “\+ Thêm” để thêm thương hiệu cho các sản phẩm
+- Chọn “\+ Thêm” để thêm thương hiệu cho các sản phẩm
+  - Thêm từng thương hiệu → Điền các thông tin biểu mẫu yêu cầu → Nhấn “Tạo” để hoàn tất thao tác thêm thương hiệu
 
-○     Thêm từng thương hiệu → Điền các thông tin biểu mẫu yêu cầu → Nhấn “Tạo” để hoàn tất thao tác thêm thương hiệu
+    ![2.png](/images/2.png)
+  - 
+  - Thêm nhiều thương hiệu bằng cách import file excel → Tải về template mẫu → Nhập thông tin các thương hiệu → Upload file → Chọn “Nhập vào” để thêm các thương hiệu
+
+    ![3.png](/images/3.png)
+- 
