Documentation edits made through Mintlify web editor

--- a/loyalty/gift-management.mdx
+++ b/loyalty/gift-management.mdx
@@ -1,6 +1,21 @@
 ---
-title: 'Quà tặng'
-description: 'Description of your new file.'
+title: "Quản lý đổi quà"
+description: "Description of your new file."
 icon: "gift"
 ---
 
+Tại phần Loyalty, truy cập Quản lý đổi quà
+
+Quản lý đổi quà tạo các chương trình đổi điểm để khách hàng sử dụng điểm tích lũy đổi lấy những voucher khuyến mãi
+
+![Screenshot 2025-09-07 at 17.16.17.png](/images/Screenshot2025-09-07at17.16.17.png)
+
+Ở giao diện tổng quan, người dùng có thể:
+
+- Thêm cài đặt cho chương trình đổi quà. Chọn “\+ Thêm cài đặt” → Điền các thông tin mà biểu mẫu yêu cầu → Chọn “Tạo” để tạo chương trình đổi quà
+- Ở phần danh sách voucher:
+  - Người dùng có thể chọn các voucher đã tạo ở “Đổi voucher” trong “CT Khuyến mãi” hoặc tạo mới voucher theo các bước như ở “Đổi voucher” trong “CT Khuyến mãi”
+
+  ![screenshot_1757240538.png](/images/screenshot_1757240538.png)
+- Chọn icon <Icon icon="pencil" color="#100cec" size={15} /> để chỉnh sửa chương trình đổi quà
+- Chọn icon <Icon icon="trash-can" color="#ef0909" size={15} /> để xóa chương trinh đổi quà
