--- a/loyalty/member-management.mdx
+++ b/loyalty/member-management.mdx
@@ -1,6 +1,24 @@
 ---
-title: 'Thành viên'
-description: 'Description of your new file.'
+title: "Thành viên"
+description: "Description of your new file."
 icon: "people-line"
 ---
 
+Tại phần Loyalty, truy cập Quản lý thành viên
+
+![Screenshot 2025-09-07 at 17.30.28.png](/images/Screenshot2025-09-07at17.30.28.png)
+
+Ở giao diện tổng quan, người dùng có thể:
+
+- Xem tổng quan tổng số người dùng 
+- Tổng hạng thành viên (thành viên đã được phân hạng)
+- Tổng số lượt tích điểm
+- Tổng số lượt điểm được đổi
+- Reset điểm
+- Chọn icon <Icon icon="eye" size={15} /> để xem chi tiết thông tin thành viên:
+  - Lịch sử đơn
+  - Lịch sử tích, đổi điểm
+  - Lịch sử đánh giá
+  - Sản phẩm yêu thích
+
+![Screenshot 2025-09-07 at 17.34.44.png](/images/Screenshot2025-09-07at17.34.44.png)
