--- a/loyalty/points-setting.mdx
+++ b/loyalty/points-setting.mdx
@@ -1,6 +1,23 @@
 ---
-title: 'Cài đặt điểm'
-description: 'Description of your new file.'
+title: "Cài đặt điểm"
+description: "Description of your new file."
 icon: "hundred-points"
 ---
 
+Tại phần Loyalty, truy cập Caif đặt tích điểm
+
+![Screenshot 2025-09-07 at 17.47.22.png](/images/Screenshot2025-09-07at17.47.22.png)
+
+Ở giao diện tổng quan, người dùng có thể:
+
+- Cài đặt quy tắc tích đổi điểm
+  - Tích điểm qua thanh toán: Mặc định 1 điểm sẽ quy đổi được bao nhiêu tiền. Người dùng có thể dùng điểm này để khấu trừ vào hóa đơn khi thanh toán
+  - Tỷ lệ quy đổi điểm: Mặc định hóa đơn bao nhiêu sẽ quy đổi được 1 điểm. Ví dụ: Setup 10.000đ = 1đ thì hóa đơn 20.000đ sẽ quy đổi được 2đ
+- Cài đặt nhiệm vụ để tích điểm: Chọn nút “\+ Thêm” ở phần “Tích điểm qua nhiệm vụ” để cài đặt nhiệm vụ tích điểm cho người dùng → Điền các thông tin mà biểu mẫu yêu cầu → Chọn “Tạo” để thêm nhiệm vụ tích điểm. Có các loại nhiệm vụ tích điểm như sau:
+  - Quan tâm Zalo OA
+  - Hoàn thành đơn hàng
+  - Đánh giá sản phẩm
+  - Quét mã QR code
+  - Tham gia khảo sát
+
+![screenshot_1757242262.png](/images/screenshot_1757242262.png)
