--- a/loyalty/ranking-management.mdx
+++ b/loyalty/ranking-management.mdx
@@ -1,6 +1,20 @@
 ---
-title: 'Hạng thành viên'
-description: 'Description of your new file.'
+title: "Hạng thành viên"
+description: "Description of your new file."
 icon: "ranking-star"
 ---
 
+Tại phần Loyalty, truy cập Quản lý hạng thành viên
+
+![Screenshot 2025-09-07 at 17.39.12.png](/images/Screenshot2025-09-07at17.39.12.png)
+
+Ở giao diện tổng quan, người dùng có thể:
+
+- Thêm hạng thành viên: Chọn “\+ Thêm” → Điền các thông tin biểu mẫu yêu cầu để tạo một hạng thành viên mới
+  - Ở giao diện điền biểu mẫu, người dùng có thể thêm voucher cho hạng thành viên tương ứng sau khi đã tạo “Voucher hạng thành viên” ở phần “Khuyến mãi”
+  - Tích vào checkbox “Giới hạn khuyến mãi” để giới hạn số tiền giảm tối đa theo đơn hàng. Không tích vào checkbox đồng nghĩa sẽ giảm số % đã xét cho tổng giá trị hóa đơn
+
+![screenshot_1757241778.png](/images/screenshot_1757241778.png)
+
+- Chọn icon <Icon icon="pencil" color="#091cf0" size={15} /> để chỉnh sửa hạng thành viên
+- Chọn icon <Icon icon="trash-can" color="#f50c0c" size={15} /> để xóa hạng thành viên
