--- a/marketing-tools/mini-game.mdx
+++ b/marketing-tools/mini-game.mdx
@@ -1,6 +1,58 @@
 ---
-title: 'Mini game'
-description: 'Description of your new file.'
+title: "Mini game"
 icon: "game-console-handheld"
+description: "Để tạo một chương trình game, người dùng cần thực hiện tuần tự các bước sau: Tạo “Voucher game” ở phần “CT Khuyến mãi” → Tạo “Giải thưởng” ở phần “Trò chơi” → Vào “Cài đặt trò chơi” để tạo chương trình game cho hệ thống"
 ---
 
+**Giải thưởng**
+
+Tại phần Trò chơi, truy cập tab Giải thưởng
+
+![Screenshot 2025-09-07 at 19.11.47.png](/images/Screenshot2025-09-07at19.11.47.png)
+
+Ở giao diện tổng quan, người dùng có thể tạo các voucher để làm phần thưởng cho chương trình game của hệ thống:
+
+- Chọn “\+ Tạo voucher” để thêm voucher cho chương trình game → Điền các thông tin biểu mẫu yêu cầu → Tại cột Danh sách voucher, chọn “Voucher game” đã tạo ở “CT Khuyến mãi" để làm phần thưởng → Nhấn “Tạo” để hoàn tất thao tác thêm giải thưởng cho chương trình game
+
+![Screenshot 2025-09-07 at 19.14.57.png](/images/Screenshot2025-09-07at19.14.57.png)
+
+- Chọn icon <Icon icon="pencil" color="#1526ec" size={15} /> để xem và chỉnh sửa giải thưởng
+- Chọn icon <Icon icon="trash-can" color="#e50b0b" size={15} /> để xóa giải thưởng
+
+**Cài đặt trò chơi**
+
+![Screenshot 2025-09-07 at 19.17.26.png](/images/Screenshot2025-09-07at19.17.26.png)
+
+Ở giao diện tổng quan, người dùng có thể tạo các chương trình game để làm phần thưởng khi khách hàng tham gia mini game trên app: 
+
+- Chọn “\+ Thêm” để tạo một chương trình game mới → Điền các thông tin mà biểu mẫu yêu cầu → Có thể thiết lập điều kiện để nhận thêm lượt chơi → Thiết lập giao diện cho chương trình game (Banner, hiệu ứng, âm thanh, …) → Thiết lập các giải thưởng đã tạo → Chọn “Tạo” để tạo mới một chương trình game cho hệ thống
+- Có thể tạo các loại chương trình game:
+  - Vòng quay may mắn
+  - Mở bao lì xì
+  - Mở hộp quà
+
+![Screenshot 2025-09-07 at 19.21.19.png](/images/Screenshot2025-09-07at19.21.19.png)
+
+![Screenshot 2025-09-07 at 19.22.06.png](/images/Screenshot2025-09-07at19.22.06.png)
+
+![Screenshot 2025-09-07 at 19.22.33.png](/images/Screenshot2025-09-07at19.22.33.png)
+
+![Screenshot 2025-09-07 at 19.22.54.png](/images/Screenshot2025-09-07at19.22.54.png)
+
+- Chọn icon <Icon icon="pencil" color="#0f0bef" size={15} /> để xem và chỉnh sửa chương trình game
+- Chọn icon <Icon icon="trash-can" color="#e80c0c" size={15} /> để xóa chương trình game
+- Người dùng có thể tìm kiếm chương trình game theo tên hoặc lọc các chương trình game theo ngày được khởi tạo để hiển thị kết quả như yêu cầu
+
+![screenshot_1757247922.png](/images/screenshot_1757247922.png)
+
+**Danh sách giải thưởng**
+
+![screenshot_1757247988.png](/images/screenshot_1757247988.png)
+
+Ở giao diện tổng quan, người dùng có thể:
+
+- Xem thống kê số người đã tham gia và tổng số lượt quay
+- Tìm kiếm người trúng thưởng theo tên hoặc theo thời gian
+- Xác nhận trao thưởng cho người tham gia bằng cách nhấn vào icon <Icon icon="gift" color="#0d0af2" size={15} />
+  - Nếu là icon <Icon icon="gift" color="#0421ed" size={15} /> → Chưa xác nhận trao thưởng
+  - Nếu hiển thị "**Is Received**" → Đã trao thưởng
