--- a/sale-management/product-management/brands-management.mdx
+++ b/sale-management/product-management/brands-management.mdx
@@ -5,7 +5,7 @@ icon: "nfc-magnifying-glass"
 
 Tại phần Quản lý sản phẩm, truy cập tab Thương hiệu.
 
-![Picture1 Pn](/images/Picture1.png)
+![Picture1 Pn](/Screenshot2025-09-07at14.44.01.png)
 
 Ở giao diện tổng quan, người dùng có thể tạo các thương hiệu để đại diện cho các sản phẩm của hệ thống
 
@@ -16,5 +16,13 @@ Tại phần Quản lý sản phẩm, truy cập tab Thương hiệu.
   - 
   - Thêm nhiều thương hiệu bằng cách import file excel → Tải về template mẫu → Nhập thông tin các thương hiệu → Upload file → Chọn “Nhập vào” để thêm các thương hiệu
 
-    ![3.png](/images/3.png)
-- 
+    ![3.png](/screenshot_1757231245.png)
+- Chọn icon <Icon icon="eye" color="#0ca8cc" size={15} /> để xem chi tiết thương hiệu
+- Chọn icon <Icon icon="pencil" color="#1025dc" size={15} /> để chỉnh sửa thương hiệu
+- Chọn icon <Icon icon="trash-can" color="#e5123a" size={15} /> để xóa thương hiệu
+  - Xóa nhiều thương hiệu cùng lúc
+
+    ![6.png](/screenshot_1757231349.png)
+- Người dùng có thể tìm kiếm thương hiệu theo tên hoặc lọc các thương hiệu theo ngày được khởi tạo để hiển thị kết quả như yêu cầu
+
+  ![7.png](/screenshot_1757231391.png)
