--- a/sale-management/product-management/review-management.mdx
+++ b/sale-management/product-management/review-management.mdx
@@ -1,6 +1,23 @@
 ---
-title: 'Đánh giá'
-description: 'Description of your new file.'
+title: "Đánh giá"
+description: "Description of your new file."
 icon: "star-sharp"
 ---
 
+Tại phần Quản lý sản phẩm, truy cập tab Đánh giá
+
+![Screenshot 2025-09-07 at 15.29.49.png](/images/Screenshot2025-09-07at15.29.49.png)
+
+Ở giao diện tổng quan, người dùng có thể xem các thống kê đánh giá của khách hàng cho từng loại sản phẩm
+
+- Chọn icon <Icon icon="pencil" color="#1204e2" size={15} /> để có thể chỉnh sửa và phản hồi đánh giá của khách hàng
+
+  ![screenshot_1757234003.png](/images/screenshot_1757234003.png)
+
+
+- Chọn icon <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt đánh giá của khách hàng
+
+  ![screenshot_1757234077.png](/images/screenshot_1757234077.png)
+- Người dùng có thể tìm kiếm đánh giá theo tên sản phẩm hoặc lọc các đánh giá theo ngày được khởi tạo, theo số sao mà khách hàng đánh giá để hiển thị kết quả như yêu cầu
+
+  ![screenshot_1757234113.png](/images/screenshot_1757234113.png)
