--- a/users-management/role-management.mdx
+++ b/users-management/role-management.mdx
@@ -1,6 +1,13 @@
 ---
-title: 'Vai trò và Quyền'
-description: 'Description of your new file.'
+title: "Vai trò và Quyền"
+description: "Description of your new file."
 icon: "user-gear"
 ---
 
+Tại phần Cài đặt, truy cập Vai trò & Quyền
+
+![screenshot_1757238965.png](/images/screenshot_1757238965.png)
+
+Thêm vai trò bằng cách: Chọn nút “\+ Thêm vai trò” → Biểu mẫu sẽ được hiển thị → Điền và chọn các thông tin phù hợp → Chọn “Tạo” để hoàn tất thao tác. (_Lưu ý: Tên vai trò không được trùng lặp)_
+
+![Screenshot 2025-09-07 at 16.58.30.png](/images/Screenshot2025-09-07at16.58.30.png)
