--- a/users-management/staff-management.mdx
+++ b/users-management/staff-management.mdx
@@ -1,6 +1,19 @@
 ---
-title: 'Quản lý nhân viên'
-description: 'Description of your new file.'
+title: "Quản lý nhân viên"
+description: "Description of your new file."
 icon: "user-tie"
 ---
 
+Tại phần Quản lý người dùng, truy cập tab Nhân viên
+
+![Screenshot 2025-09-07 at 16.48.53.png](/images/Screenshot2025-09-07at16.48.53.png)
+
+Ở giao diện tổng quan, người dùng có thể thấy được các thông tin của nhân viên như sau:
+
+- Các thông tin của nhân viên (tên, email, ngày tạo, trạng thái)
+- Người dùng có thể tìm kiếm nhân viên theo tên, email, số điện thoại hoặc lọc theo ngày khởi tạo, trạng thái để hiển thị kết quả theo yêu cầu
+- Chọn icon <Icon icon="pencil" color="#0919dc" size={15} /> để chỉnh sửa thông tin nhân viên
+- Chọn icon <Icon icon="trash-can" color="#f00808" size={15} /> để xóa nhân viên khỏi hệ thống
+- Thêm nhân viên: Chọn “\+ Thêm” để thêm nhân viên mới → Điền các thông tin biểu mẫu yêu cầu và chọn vai trò cho nhân viên (Nếu chưa tạo vai trò thì nhấn nút <Icon icon="circle-plus" size={15} /> để tạo vai trò và phân quyền hạn cho nhân viên) → Nhấn “Tạo” để hoàn tất quá trình tạo nhân viên mới
+
+  ![screenshot_1757238771.png](/images/screenshot_1757238771.png)
