--- a/users-management/customers-management.mdx
+++ b/users-management/customers-management.mdx
@@ -4,86 +4,41 @@ description: "Description of your new file."
 icon: "circle-user"
 ---
 
+Tại phần Quản lý người dùng, truy cập tab Khách hàng
 
-# Quickstart
+![screenshot_1757237218.png](/images/screenshot_1757237218.png)
 
-> Start building awesome documentation in minutes
+Ở giao diện tổng quan, người dùng có thể thấy được các số liệu thống kê cũng như các thông tin Khách hàng hiện tại như:
 
-## Get started in three steps
+- Tổng khách hàng: Tổng số khách hàng hiện tại được ghi nhận trên hệ thống
+- Tổng khách hàng nợ: Số tiền mà khách hàng chưa thanh toán
+- Tổng thu: Tổng thu nhập từ khách hàng đã thanh toán
+- Số khách hàng còn nợ: Cho biết có bao nhiêu khách hàng còn chưa thanh toán
 
-Get your documentation site running locally and make your first customization.
+Người dùng có thể tìm kiếm khách hàng theo tên, email, số điện thoại hoặc lọc các khách hàng được khởi tạo theo thời gian hoặc theo trạng thái (Đã kích hoặc - Vô hiệu hóa)
 
-### Step 1: Tạo đơn hàng
+![screenshot_1757237385.png](/images/screenshot_1757237385.png)
 
-<AccordionGroup>
-  <Accordion title="Clone your docs locally" icon="copy">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
+Để thêm một khách hàng mới, người dùng nhấn nút “\+ Thêm” → Điền các thông tin biểu mẫu yêu cầu → Nhấn “Tạo” để hoàn tất thao tác tạo khách hàng (Những khách hàng được tạo từ hệ thống sẽ được gắn tag “Khách hàng ngoài”)
 
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion title="Start the preview server" icon="rectangle-terminal">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live\!
+![screenshot_1757237474.png](/images/screenshot_1757237474.png)
 
-    <Tip>
-      Your preview updates automatically as you edit files.
-    </Tip>
-  </Accordion>
-</AccordionGroup>
+Mỗi khách hàng sau khi được khởi tạo hoặc từ mini app sẽ có các thông tin như sau:
 
-<Accordion title="123" icon="sparkles">
-  123
-</Accordion>
+- Chọn icon <Icon icon="eye" color="#08acdf" size={15} /> để xem chi tiết thông tin khách hàng
+  - Lịch sử đơn
+  - Lịch sử tích, đổi điểm
+  - Lịch sử đánh giá sản phẩm
+  - Danh sách sản phẩm yêu thích
+  - Lịch sử Affiliate
+  - Ví trả trước
+- Chọn icon <Icon icon="pencil" color="#0a16e8" size={15} /> để chỉnh sửa thông tin khách hàng
+- Chọn icon <Icon icon="trash-can" color="#e50c0c" size={15} /> để xóa từng khách hàng
+  - Xóa cùng lúc nhiều khách hàng: Chọn check-box → Nhấn nút “Xóa”
+  - <u>Lưu ý</u>: Khách hàng đã phát sinh giao dịch vs hệ thống sẽ không thể xóa
+- Thể hiện công nợ trên giao diện mỗi khách hàng
 
-### Step 2: Cập nhật trạng thái đơn hàng
+  ![screenshot_1757238193.png](/images/screenshot_1757238193.png)
+- Tạo nhóm khách hàng: Chọn check-box trước mỗi khách hàng → Nhấn nút “Thêm nhóm” → Tạo một nhóm khách hàng mới (nhấn nút <Icon icon="circle-plus" size={15} /> → Điền các thông tin biểu mẫu yêu cầu → Nhấn “Tạo” để hoàn tất) hoặc thêm khách hàng đã chọn vào nhóm đã có
 
-<AccordionGroup>
-  <Accordion title="Install our GitHub app" icon="github">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-  </Accordion>
-  <Accordion title="Update your site name and colors" icon="palette">
-    For a first change, let's update the name and colors of your docs site.
-
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
-
-    <Tip>
-      Try changing the primary color to see an immediate difference\!
-    </Tip>
-  </Accordion>
-</AccordionGroup>
-
-### Step 3: Chi tiết trạng thái đơn hàng
-
-<Accordion title="Publish your docs" icon="rocket">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments\!
-</Accordion>
-
-## Next steps
-
-Now that you have your docs running, explore these key features:
-
-<CardGroup cols={2}>
-  <Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-    Learn MDX syntax and start writing your documentation.
-  </Card>
-  <Card title="Customize style" icon="palette" href="/essentials/settings">
-    Make your docs match your brand perfectly.
-  </Card>
-  <Card title="Add code examples" icon="square-code" href="/essentials/code">
-    Include syntax-highlighted code blocks.
-  </Card>
-  <Card title="API documentation" icon="code" href="/api-reference/introduction">
-    Auto-generate API docs from OpenAPI specs.
-  </Card>
-</CardGroup>
-
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
+  ![screenshot_1757238353.png](/images/screenshot_1757238353.png)
