Documentation edits made through Mintlify web editor

--- a/app-builder/authentication/register-login.mdx
+++ b/app-builder/authentication/register-login.mdx
@@ -1,6 +1,7 @@
 ---
-title: 'Tạo tài khoản & Login'
-description: 'Description of your new file.'
+title: "Tạo tài khoản & Login"
+description: "Description of your new file."
 icon: "arrow-right-to-arc"
 ---
 
+# /
