--- a/index.mdx
+++ b/index.mdx
@@ -1,9 +1,37 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "AppMinis - Giới thiệu chung"
+description: "AppMinis là nền tảng thiết kế Mini App và Mobile App tự động, giúp các cá nhân và doanh nghiệp tạo ứng dụng nhanh chóng chỉ trong vài phút mà không cần biết lập trình."
 ---
 
-## Setting up
+## **Giới thiệu chung**
+
+AppMinis là nền tảng thiết kế Mini App và Mobile App tự động, giúp các cá nhân và doanh nghiệp tạo ứng dụng nhanh chóng chỉ trong vài phút mà không cần biết lập trình. Nền tảng này sử dụng thao tác kéo thả (drag-and-drop) đơn giản và cung cấp nhiều mẫu thiết kế cùng tính năng đa dạng.
+
+### **AppMinis phù hợp với:**
+
+- **Doanh nghiệp vừa và nhỏ (SME):** tối ưu chi phí và thời gian để xây dựng ứng dụng di động hoặc Mini App trên các nền tảng như Zalo, giúp nhanh chóng số hóa hoạt động kinh doanh.
+- **Doanh nghiệp lớn & tập đoàn:** cần nền tảng linh hoạt để triển khai các ứng dụng nội bộ, quản lý nhân sự, quản lý bán hàng hoặc xây dựng kênh chăm sóc khách hàng riêng, có khả năng mở rộng và tích hợp với hệ thống sẵn có.
+- **Cá nhân và người không chuyên lập trình:** mong muốn sở hữu ứng dụng riêng cho kinh doanh hoặc mục đích cá nhân mà không cần thuê đội ngũ lập trình viên.
+- **Chủ cửa hàng, nhà hàng, quán cà phê:** tăng cường tương tác, triển khai chương trình loyalty, khuyến mãi và chăm sóc khách hàng trên kênh riêng.
+- **Trung tâm giáo dục & đào tạo:** quản lý học viên, chia sẻ bài giảng, tổ chức khóa học online hoặc đào tạo nội bộ.
+- **Doanh nghiệp dịch vụ (spa, thẩm mỹ viện, phòng gym…):** cung cấp tính năng đặt lịch, quản lý khách hàng, theo dõi dịch vụ và truyền thông hiệu quả.
+- **Tổ chức sự kiện, du lịch, truyền thông:** quản lý sự kiện, vé điện tử (e-ticket), đặt tour, lịch trình hoặc kênh thông tin dành riêng cho khách hàng.
+
+### **Những gì bạn có thể tạo ra**
+
+Với **AppMinis**, bạn có thể nhanh chóng xây dựng ứng dụng cho nhiều lĩnh vực như **thương mại điện tử, bán lẻ, giáo dục, thời trang, spa, F&B, du lịch, sức khoẻ** và nhiều ngành nghề khác.
+
+Các loại ứng dụng bạn có thể tạo gồm:
+
+- **Ứng dụng thương mại điện tử**: trang sản phẩm, danh mục, giỏ hàng, thanh toán online.
+- **Ứng dụng dịch vụ**: Spa, nhà hàng, quán café… với tính năng đặt lịch, đặt bàn (booking).
+- **Ứng dụng giáo dục & đào tạo**: khóa học online, bài giảng, kiểm tra kiến thức, quản lý học viên.
+- **Ứng dụng tin tức & blog**: cập nhật thông tin, bài viết, video, thông báo.
+- **Ứng dụng chăm sóc khách hàng**: mini game, loyalty, khuyến mãi, thông báo đẩy (push notification).
+- **Ứng dụng truyền thông & sự kiện**: lịch sự kiện, vé điện tử (e-ticket), livestream, bình chọn.
+- **Ứng dụng quản lý bán hàng**: quản lý đơn hàng, kho hàng, khách hàng và doanh thu.
+- **Ứng dụng y tế & sức khỏe**: đặt lịch khám, tư vấn trực tuyến, theo dõi hồ sơ bệnh án.
+- **Ứng dụng du lịch**: gợi ý địa điểm, đặt tour, đặt phòng, lịch trình di chuyển.
 
 Get your documentation site up and running in minutes.
 
