--- a/sale-management/product-management/products-management.mdx
+++ b/sale-management/product-management/products-management.mdx
@@ -4,36 +4,4 @@ description: "Description of your new file."
 icon: "box-isometric"
 ---
 
-Tại phần Quản lý sản phẩm, truy cập tab Sản phẩm.
-
-![Screenshot 2025-09-07 at 15.02.06.png](/images/Screenshot2025-09-07at15.02.06.png)
-
-Ở giao diện tổng quan, người dùng có thể thấy được các số liệu báo cáo của từng sản phẩm và các tính năng như sau:
-
-- Tổng sản phẩm: Số sản phẩm mà hệ thống hiện có
-- Sản phẩm còn hàng: Những sản phẩm vẫn còn tồn kho
-- Sản phẩm hết hàng: Những sản phẩm đã hết tồn kho
-- Tổng sản phẩm đã bán: Những sản phẩm đã được mua (Không kể số lượng)
-- Chọn “\+ Thêm sản phẩm” để thêm sản phẩm mới cho hệ thống
-  - Thêm từng sản phẩm → Điền các thông tin biểu mẫu yêu cầu → Nhấn “Tạo” để hoàn tất thao tác thêm sản phẩm
-
-  ![Screenshot 2025-09-07 at 15.07.47.png](/images/Screenshot2025-09-07at15.07.47.png)
-  - Thêm sản phẩm biến thể, khi thêm sản phẩm → Tích vào ô “Sản phẩm biến thể” → Điền các thông tin biểu mẫu yêu cầu → Nhấn “Tạo” để thêm sản phẩm biến thể
-
-  ![screenshot_1757232680.png](/images/screenshot_1757232680.png)
-  - Thêm nhiều sản phẩm bằng cách import file excel → Tải về template mẫu → Nhập thông tin các sản phẩm → Upload file → Chọn “Nhập vào” để thêm các sản phẩm
-
-  ![screenshot_1757232733.png](/images/screenshot_1757232733.png)
-- Tìm kiếm sản phẩm theo tên, ngày tạo, danh mục, thương hiệu
-
-  ![screenshot_1757232803.png](/images/screenshot_1757232803.png)
-- Chọn icon <Icon icon="eye" color="#159ee2" size={15} /> để xem chi tiết sản phẩm
-- Chọn icon <Icon icon="pencil" color="#1512d5" size={15} /> để chỉnh sửa sản phẩm
-- Chọn icon <Icon icon="trash-can" color="#e50c0c" size={15} /> để xóa từng sản phẩm
-  - Xóa nhiều sản phẩm cùng lúc. Chọn check-box → Hành động → Xóa
-
-    ![screenshot_1757233259.png](/images/screenshot_1757233259.png)
-- Chọn icon <Icon icon="toggle-large-on" color="#0b30df" size={15} /> để bật/tắt sản phẩm
-  - Bật/tắt nhiều sản phẩm cùng lúc. Chọn check-box → Hành động → On/Off sản phẩm
-
-    ![screenshot_1757233656.png](/images/screenshot_1757233656.png)
+ádf
