Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -31,7 +31,7 @@ Get your app up and running in minutes with **AppMinis**.
   <Card title="Truy cập trang quản trị" icon="gauge" href="/admin">
     Quản lý ứng dụng, nội dung, khách hàng và đơn hàng một cách dễ dàng.
   </Card>
-  <Card title="Khám phá mẫu ứng dụng" icon="palette" href="/templates">
+  <Card title="Khám phá mẫu 100+ ứng dụng" icon="palette" href="/templates">
     Trải nghiệm các template sẵn có để triển khai nhanh cho nhiều ngành nghề.
   </Card>
   <Card title="Tùy chỉnh giao diện" icon="pen-to-square" href="/customization">
