Documentation edits made through Mintlify web editor

--- a/app-builder/introduction/quickstart.mdx
+++ b/app-builder/introduction/quickstart.mdx
@@ -4,3 +4,44 @@ description: 'Description of your new file.'
 icon: "circle-user"
 ---
 
+### **Những gì bạn có thể tạo ra**
+
+Với **AppMinis**, bạn có thể nhanh chóng xây dựng ứng dụng cho nhiều lĩnh vực như **thương mại điện tử, bán lẻ, giáo dục, thời trang, spa, F&B, du lịch, sức khoẻ** và nhiều ngành nghề khác.
+
+Các loại ứng dụng bạn có thể tạo gồm:
+
+- **Ứng dụng thương mại điện tử**: trang sản phẩm, danh mục, giỏ hàng, thanh toán online.
+- **Ứng dụng dịch vụ**: Spa, nhà hàng, quán café… với tính năng đặt lịch, đặt bàn (booking).
+- **Ứng dụng giáo dục & đào tạo**: khóa học online, bài giảng, kiểm tra kiến thức, quản lý học viên.
+- **Ứng dụng tin tức & blog**: cập nhật thông tin, bài viết, video, thông báo.
+- **Ứng dụng chăm sóc khách hàng**: mini game, loyalty, khuyến mãi, thông báo đẩy (push notification).
+- **Ứng dụng truyền thông & sự kiện**: lịch sự kiện, vé điện tử (e-ticket), livestream, bình chọn.
+- **Ứng dụng quản lý bán hàng**: quản lý đơn hàng, kho hàng, khách hàng và doanh thu.
+- **Ứng dụng y tế & sức khỏe**: đặt lịch khám, tư vấn trực tuyến, theo dõi hồ sơ bệnh án.
+- **Ứng dụng du lịch**: gợi ý địa điểm, đặt tour, đặt phòng, lịch trình di chuyển.
+
+
+## Create beautiful pages
+
+Everything you need to create world-class documentation.
+
+<Columns cols={2}>
+  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
+    Use MDX to style your docs pages.
+  </Card>
+  <Card title="Code samples" icon="code" href="/essentials/code">
+    Add sample code to demonstrate how to use your product.
+  </Card>
+  <Card title="Images" icon="image" href="/essentials/images">
+    Display images and other media.
+  </Card>
+  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
+    Write once and reuse across your docs.
+  </Card>
+</Columns>
+
+## Need inspiration?
+
+<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
+  Browse our showcase of exceptional documentation sites.
+</Card>
