Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -28,16 +28,16 @@ Get your app up and running in minutes with **AppMinis**.
 Điều khiển toàn bộ ứng dụng từ giao diện quản trị và mở rộng với API.
 
 <Columns cols={2}>
-  <Card title="Truy cập trang quản trị" icon="gauge" href="/admin">
+  <Card title="Thiết kế giao diện" icon="pen-to-square" href="/app-builder/builder/pages/home">
+    Cá nhân hóa màu sắc, bố cục và tính năng theo thương hiệu của bạn.
+  </Card>
+  <Card title="Truy cập trang quản trị" icon="gauge" href="/quickstart">
     Quản lý ứng dụng, nội dung, khách hàng và đơn hàng một cách dễ dàng.
   </Card>
   <Card title="Khám phá mẫu 100+ ứng dụng" icon="palette" href="/templates">
     Trải nghiệm các template sẵn có để triển khai nhanh cho nhiều ngành nghề.
   </Card>
-  <Card title="Tùy chỉnh giao diện" icon="pen-to-square" href="/customization">
-    Cá nhân hóa màu sắc, bố cục và tính năng theo thương hiệu của bạn.
-  </Card>
-  <Card title="Open API" icon="plug" href="/api">
+  <Card title="Open API" icon="plug" href="/api-reference/introduction">
     Tích hợp linh hoạt với hệ thống và nền tảng khác qua API mở rộng.
   </Card>
 </Columns>
