--- a/app-builder/introduction/quickstart.mdx
+++ b/app-builder/introduction/quickstart.mdx
@@ -38,6 +38,18 @@ Everything you need to create world-class documentation.
   <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
     Write once and reuse across your docs.
   </Card>
+    <Card title="Thiết kế giao diện" icon="pen-to-square" href="/customization">
+    Cá nhân hóa màu sắc, bố cục và tính năng theo thương hiệu của bạn.
+  </Card>
+  <Card title="Truy cập trang quản trị" icon="gauge" href="/admin">
+    Quản lý ứng dụng, nội dung, khách hàng và đơn hàng một cách dễ dàng.
+  </Card>
+  <Card title="Khám phá mẫu 100+ ứng dụng" icon="palette" href="/templates">
+    Trải nghiệm các template sẵn có để triển khai nhanh cho nhiều ngành nghề.
+  </Card>
+  <Card title="Open API" icon="plug" href="/api">
+    Tích hợp linh hoạt với hệ thống và nền tảng khác qua API mở rộng.
+  </Card>
 </Columns>
 
 ## Need inspiration?
