Documentation edits made through Mintlify web editor

--- a/app-builder/introduction/quickstart.mdx
+++ b/app-builder/introduction/quickstart.mdx
@@ -26,34 +26,22 @@ Các loại ứng dụng bạn có thể tạo gồm:
 Everything you need to create world-class documentation.
 
 <Columns cols={2}>
-  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
-    Use MDX to style your docs pages.
-  </Card>
-  <Card title="Code samples" icon="code" href="/essentials/code">
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card title="Images" icon="image" href="/essentials/images">
-    Display images and other media.
-  </Card>
-  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
-    Write once and reuse across your docs.
-  </Card>
-    <Card title="Thiết kế giao diện" icon="pen-to-square" href="/customization">
+  <Card title="Thiết kế giao diện" icon="pen-to-square" href="/app-builder/builder/pages/home">
     Cá nhân hóa màu sắc, bố cục và tính năng theo thương hiệu của bạn.
   </Card>
-  <Card title="Truy cập trang quản trị" icon="gauge" href="/admin">
+  <Card title="Tính năng mở rộng" icon="gauge" href="/app-builder/builder/features/automation">
     Quản lý ứng dụng, nội dung, khách hàng và đơn hàng một cách dễ dàng.
   </Card>
-  <Card title="Khám phá mẫu 100+ ứng dụng" icon="palette" href="/templates">
+  <Card title="Xuất bản App" icon="palette" href="/app-builder/builder/demo-app">
     Trải nghiệm các template sẵn có để triển khai nhanh cho nhiều ngành nghề.
   </Card>
-  <Card title="Open API" icon="plug" href="/api">
+  <Card title="Open API Docs" icon="plug" href="/api">
     Tích hợp linh hoạt với hệ thống và nền tảng khác qua API mở rộng.
   </Card>
 </Columns>
 
-## Need inspiration?
+## Cần hỗ trợ?
 
-<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
+<Card title="Kênh hỗ trợ" icon="stars" href="/app-builder/builder/support">
   Browse our showcase of exceptional documentation sites.
 </Card>
