Documentation edits made through Mintlify web editor

--- a/app-builder/introduction/quickstart.mdx
+++ b/app-builder/introduction/quickstart.mdx
@@ -21,27 +21,27 @@ Các loại ứng dụng bạn có thể tạo gồm:
 - **Ứng dụng du lịch**: gợi ý địa điểm, đặt tour, đặt phòng, lịch trình di chuyển.
 
 
-## Create beautiful pages
+## Thiết kế Mini App / Mobile App
 
-Everything you need to create world-class documentation.
+Tất cả những gì bạn cần để tạo và triển khai ứng dụng chuyên nghiệp.
 
 <Columns cols={2}>
   <Card title="Thiết kế giao diện" icon="pen-to-square" href="/app-builder/builder/pages/home">
     Cá nhân hóa màu sắc, bố cục và tính năng theo thương hiệu của bạn.
   </Card>
   <Card title="Tính năng mở rộng" icon="gauge" href="/app-builder/builder/features/automation">
-    Quản lý ứng dụng, nội dung, khách hàng và đơn hàng một cách dễ dàng.
+    Quản lý ứng dụng, nội dung, khách hàng và đơn hàng một cách tiện lợi.
   </Card>
-  <Card title="Xuất bản App" icon="palette" href="/app-builder/builder/demo-app">
-    Trải nghiệm các template sẵn có để triển khai nhanh cho nhiều ngành nghề.
+  <Card title="Xuất bản ứng dụng" icon="palette" href="/app-builder/builder/demo-app">
+    Sử dụng các mẫu sẵn có để triển khai nhanh cho nhiều ngành nghề.
   </Card>
-  <Card title="Open API Docs" icon="plug" href="/api">
-    Tích hợp linh hoạt với hệ thống và nền tảng khác qua API mở rộng.
+  <Card title="Tài liệu API mở" icon="plug" href="/api">
+    Tích hợp dễ dàng với các hệ thống và nền tảng khác qua API mở rộng.
   </Card>
 </Columns>
 
 ## Cần hỗ trợ?
 
 <Card title="Kênh hỗ trợ" icon="stars" href="/app-builder/builder/support">
-  Browse our showcase of exceptional documentation sites.
+  Truy cập tài liệu và các kênh hỗ trợ để được giải đáp nhanh chóng.
 </Card>
