Documentation edits made through Mintlify web editor

--- a/app-builder/introduction/quickstart.mdx
+++ b/app-builder/introduction/quickstart.mdx
@@ -35,7 +35,7 @@ Tất cả những gì bạn cần để tạo và triển khai ứng dụng chu
   <Card title="Xuất bản ứng dụng" icon="palette" href="/app-builder/builder/demo-app">
     Sử dụng các mẫu sẵn có để triển khai nhanh cho nhiều ngành nghề.
   </Card>
-  <Card title="Tài liệu API mở" icon="plug" href="/api">
+  <Card title="Tài liệu API mở" icon="plug" href="/api-reference/introduction">
     Tích hợp dễ dàng với các hệ thống và nền tảng khác qua API mở rộng.
   </Card>
 </Columns>
