Documentation edits made through Mintlify web editor

--- a/app-builder/introduction/quickstart.mdx
+++ b/app-builder/introduction/quickstart.mdx
@@ -21,7 +21,7 @@ Các loại ứng dụng bạn có thể tạo gồm:
 - **Ứng dụng du lịch**: gợi ý địa điểm, đặt tour, đặt phòng, lịch trình di chuyển.
 
 
-## Thiết kế Mini App / Mobile App
+## Thiết kế Mobile App/Mini App
 
 Tất cả những gì bạn cần để tạo và triển khai ứng dụng chuyên nghiệp.
 
