Documentation edits made through Mintlify web editor

--- a/app-builder/authentication/register-login.mdx
+++ b/app-builder/authentication/register-login.mdx
@@ -1,7 +1,77 @@
 ---
-title: "Tạo tài khoản & Login"
-description: "Description of your new file."
+title: "Tạo tài khoản & Đăng nhập"
+description: "Hướng dẫn tạo tài khoản và đăng nhập vào hệ thống AppMinis."
 icon: "arrow-right-to-arc"
 ---
 
-# /
+## Bắt đầu với AppMinis
+
+Thực hiện các bước dưới đây để tạo tài khoản và đăng nhập vào hệ thống.
+
+### 1. Tạo tài khoản
+
+<AccordionGroup>
+  <Accordion title="Truy cập website" icon="globe">
+    <Frame>
+      <img
+        src="/Screenshot2025-09-24at2.55.56AM.png"
+        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
+    Bước 1: Người dùng truy cập vào website: http://appminis.io/builder
+    Bước 2: Nhấn **Đăng nhập/Đăng ký** để mở cửa sổ. Sau đó chọn **Đăng ký** để tạo tài khoản mới trên hệ thống AppMinis.
+  </Accordion>
+  <Accordion title="Màn hình đăng ký" icon="user-plus">
+    Nhập các thông tin để đăng ký tài khoản mới:
+
+    - **Email**: Nhập email hợp lệ đã đăng ký tài khoản Google.
+    - **Tên người dùng**: Nhập tên người dùng.
+    - **Số điện thoại**: Nhập số điện thoại.
+    - **Mật khẩu**: Mật khẩu phải từ 8 ký tự trở lên.
+    - **Xác nhận mật khẩu**: Nhập lại chính xác mật khẩu vừa nhập.
+    - **Ghi nhớ mật khẩu**: Tick chọn nếu muốn đăng nhập nhanh cho những lần sau.
+
+    Sau đó nhấn nút **Đăng ký** để hoàn tất.
+  </Accordion>
+</AccordionGroup>
+
+### 2. Đăng nhập
+
+<AccordionGroup>
+  <Accordion title="Truy cập website" icon="globe">
+    Người dùng truy cập vào website: http://appminis.io/builder
+
+    <Frame>
+      <img
+        src="/Screenshot2025-09-24at2.55.23AM.png"
+        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
+    sau đó nhấn **Đăng nhập/Đăng ký** để mở cửa sổ đăng nhập.
+  </Accordion>
+  <Accordion title="Các phương thức đăng nhập" icon="key">
+    Người dùng có thể đăng nhập vào hệ thống AppMinis bằng một trong các cách sau:
+
+    - **Google**: Đăng nhập thông qua tài khoản Google.
+    - **Facebook**: Đăng nhập thông qua tài khoản Facebook.
+    - **Quét mã QR (Zalo)**: Nhấn chọn, sau đó dùng Zalo để quét mã QR.
+    - **Email hoặc Số điện thoại + Mật khẩu**: Nhập thông tin đã đăng ký để đăng nhập.
+  </Accordion>
+</AccordionGroup>
+
+---
+
+## Tiếp theo
+
+<CardGroup cols={2}>
+  <Card title="Khám phá App Builder" icon="pen-to-square" href="/app-builder/builder/pages/home">
+    Bắt đầu thiết kế và tùy chỉnh Mini App hoặc Mobile App của bạn.
+  </Card>
+  <Card title="Hỗ trợ & tài liệu" icon="stars" href="/app-builder/builder/support">
+    Truy cập kênh hỗ trợ để được giải đáp nhanh chóng.
+  </Card>
+</CardGroup>
