Documentation edits made through Mintlify web editor

--- a/app-builder/authentication/user-profile.mdx
+++ b/app-builder/authentication/user-profile.mdx
@@ -1,6 +1,53 @@
 ---
-title: 'User Profile'
-description: 'Description of your new file.'
+title: "User Profile"
+description: "Chức năng Hồ sơ người dùng cho phép bạn quản lý thông tin cá nhân, thay đổi cài đặt tài khoản và đăng xuất khỏi hệ thống AppMinis một cách dễ dàng."
 icon: "user"
 ---
 
+## Hồ sơ người dùng (User Profile)
+
+Chức năng **Hồ sơ người dùng** cho phép bạn quản lý thông tin cá nhân, thay đổi cài đặt tài khoản và đăng xuất khỏi hệ thống AppMinis một cách dễ dàng.
+
+---
+
+### 1. Cài đặt tài khoản
+
+<Steps>
+<Step title="Truy cập Hồ sơ">
+Nhấn vào **ảnh đại diện** ở góc trên bên phải màn hình để mở menu hồ sơ.
+</Step>
+
+<Step title="Mở Cài đặt tài khoản">
+Chọn **Cài đặt tài khoản** để đi đến trang chỉnh sửa thông tin cá nhân.
+</Step>
+
+<Step title="Thay đổi số điện thoại">
+1. Nhấn nút **Thay đổi số điện thoại**.  
+2. Nhập số điện thoại mới → chọn **Xác nhận** để lưu thay đổi.
+</Step>
+
+<Step title="Thay đổi mật khẩu">
+1. Nhấn nút **Thay đổi mật khẩu**.  
+2. Nhập **mật khẩu cũ**, sau đó nhập **mật khẩu mới** và **xác nhận mật khẩu mới**.  
+3. Nhấn **Cập nhật** để lưu thay đổi.
+</Step>
+</Steps>
+
+---
+
+### 2. Đăng xuất tài khoản
+
+<Steps>
+<Step title="Truy cập Hồ sơ">
+Nhấn vào **ảnh đại diện** ở góc trên bên phải màn hình.
+</Step>
+
+<Step title="Chọn Đăng xuất">
+Chọn **Đăng xuất** trong menu.
+</Step>
+
+<Step title="Xác nhận hành động">
+- Tại cửa sổ thông báo hiện lên, nhấn **Đăng xuất** để thoát khỏi hệ thống.  
+- Nếu không muốn đăng xuất, chọn **Hủy** để quay lại.
+</Step>
+</Steps>
