Documentation edits made through Mintlify web editor

--- a/app-builder/authentication/reset-account.mdx
+++ b/app-builder/authentication/reset-account.mdx
@@ -7,19 +7,23 @@ icon: "repeat"
 ### Quên mật khẩu
 
 <AccordionGroup>
-  <Accordion title="Bước 1: Chọn Quên mật khẩu" icon="lock">
-    Người dùng truy cập vào **Đăng nhập/Đăng ký** ở góc phải màn hình\
+  <Accordion title="Bước 1: Chọn Quên mật khẩu" icon="lock" defaultOpen>
+    Người dùng truy cập vào **Đăng nhập/Đăng ký** ở góc phải màn hình  
     → Chọn **Quên mật khẩu**.
   </Accordion>
-  <Accordion title="Bước 2: Nhập số điện thoại & nhận OTP" icon="phone">
-    - Nhập số điện thoại và nhấn **Xác nhận** để nhận mã OTP.
+
+  <Accordion title="Bước 2: Nhập số điện thoại & nhận OTP" icon="phone" defaultOpen>
+    - Nhập số điện thoại và nhấn **Xác nhận** để nhận mã OTP.  
     - Mã OTP sẽ được gửi qua **ZaloOA** về số điện thoại đã đăng ký.
   </Accordion>
-  <Accordion title="Bước 3: Nhập OTP & đặt lại mật khẩu" icon="shield-keyhole">
-    - Người dùng nhập mã OTP đã nhận được và nhấn **Xác nhận**.
+
+  <Accordion title="Bước 3: Nhập OTP & đặt lại mật khẩu" icon="shield-keyhole" defaultOpen>
+    - Người dùng nhập mã OTP đã nhận được và nhấn **Xác nhận**.  
     - Tiếp theo, nhập mật khẩu mới và nhấn **Xác nhận** để đặt lại mật khẩu thành công.
   </Accordion>
-  <Accordion title="Bước 4: Đăng nhập lại" icon="arrow-right-to-arc">
+
+  <Accordion title="Bước 4: Đăng nhập lại" icon="arrow-right-to-arc" defaultOpen>
     Người dùng tiến hành đăng nhập lại tài khoản để tiếp tục sử dụng các tính năng của AppMinis.
   </Accordion>
 </AccordionGroup>
+
